# nexus-cli

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py
agents/communications/: main.py
agents/junior_dev/: main.py
agents/project_manager/: main.py
agents/release_qa/: main.py
agents/senior_dev/: main.py
config/: READ_ME_KEY_ROTATION.md  limits.yaml  models.yaml  models.yaml.bak.20250816_182348  roles.yaml  settings.toml
connectors/: __init__.py
connectors/discord/: __init__.py  bot.py
connectors/providers/: __init__.py  base.py  claude_code.py  codex_cli.py  deepseek.py  google_ai_studio.py  groq.py  openrouter.py  qwen.py  together.py
connectors/vault/: __init__.py  fs.py
core/: __init__.py  config.py  orchestrator.py  queue.py  rate_limiter.py  router.py  task.py
docs/: DEVLOG.md  ROADMAP.md  USAGE.md
nexus_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
releases/v0.001/: NOTES.md  TESTS.md
scripts/: fix-env.sh  print_status.py
src/nexuscli/: __init__.py  orchestrator.py
tasks/done/: 6e6f9d05_implement_a_slugify_utility_function_that_converts_strings_to_url-friendly_slugs.md  de79d313_implement_a_slugify_utility_function_that_converts_strings_to_url-friendly_slugs.md
tests/: __init__.py  test_rate_limit.py  test_rotation_google.py  test_router_paid_flag.py  test_string_utils.py
utils/: __init__.py  string_utils.py
