[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-cli"
version = "0.0.1"
description = "Local-first 5-agent development stack"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=3.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "discord.py>=2.3.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["core*", "agents*", "connectors*", "utils*"]
exclude = ["tests*", "config*", "docs*", "releases*", "tasks*", "vault*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "S", "B", "A", "C4", "EM", "PIE", "T20", "Q", "SIM", "TID", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]